app/assets/stylesheets/layouts/user-show.scss
#intro {
	position: relative;
	height: $intro-height-S;
	margin-top: $header-height-S;
	z-index: index($elements, posts);

	#intro-background {
		height:100%;
		width: 100%;
		background: url('ocean_coast.jpg') no-repeat center center;
		background-size: cover;

		#intro-user-info {
			width: 100%;
			height: 70px;
			background: rgba(2,23,37,0.8);
			position: absolute;
		  bottom: 0;
  		left: 0;
  		display: inline-block;
		}
	}

	.intro-user-avatar {
		img {
			width: 50px;
			border-radius: 50%;
			margin-right: 1em;
			margin-bottom: 1em;
  		border: 2px solid $white;
		}
	}

	.intro-user-name {
		color: $white;
	}

	.small {
		@include font-size(12px);
		color: $medium-gray;
	}

	@include MQ(M) {
		.intro-user-avatar {

			img {
				width: 50px;
				border-radius: 50%;
				position: absolute;
				top: 10px;
	  		left: 15px;
	  		border: 2px solid $white;
			}
		}

		.intro-user-name {
			color: $white;
			padding-top: 9px;
	  	@include font-size(18px);
		}

		.right-stats {
			@include font-size(18px);
			padding-bottom: 6px;
		}

		.left-info {

			ul {
		    top: 16px;
		    left: 80px;
		    position: relative;
			}

			ul li {
				list-style: none;
				display: inline;
				text-align: left;
				padding-right: 1em; 
				float: left;
			}
		}

		.right-info {
			float: right;
			color: $white;

			ul {
				position: relative;
				top: 16px;
				right: 20px;
			}

			ul li {
				list-style: none;
				display: inline;
				float: right;
				padding-right: 1em;
			}

			.stacked-info {
				li {
					display: block;
				}
			}
		}
	}
}

